
  [ David Pires ]
  * Xubuntu: Write a slide about Whiskermenu

  [ Jack Fromm ]
  * Xubuntu: Write a slide about personalization

  [ Elfy ]
  * Xubuntu: Update the "Thanks" slide

  [ Pasi Lallinaho ]
  * Xubuntu: Refresh artwork
  * Xubuntu: Update the desktop slide
  * Xubuntu: Add a slide that lists some default applications
  * Xubuntu: Update the Help & Support slide

 -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 15 Mar 2014 11:57:56 +0200

ubiquity-slideshow-ubuntu (78) trusty; urgency=medium

  [ Pasi Lallinaho ]
  * Update Xubuntu slide for 14.04 beta 1.

  [ Stéphane Graber ]
  * Update all PO templates.
  * Update translations from Launchpad.

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 24 Feb 2014 10:24:55 -0500

ubiquity-slideshow-ubuntu (77) trusty; urgency=medium

  [ Rohan Garg ]
  * Update Kubuntu slideshow with Firefox

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 06 Feb 2014 00:06:01 +0000

ubiquity-slideshow-ubuntu (76) trusty; urgency=medium

  [ Dimitri John Ledkov ]
  * Replace 13.10 with 14.04 in all slideshows. (LP: #1250052)

  [ Pasi Lallinaho ]
  * Prepare new slides for the Xubuntu 14.04 slideshow.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Sun, 26 Jan 2014 05:48:09 +0000

ubiquity-slideshow-ubuntu (75) saucy; urgency=low

  * Update translations from Launchpad.

 -- Stéphane Graber <stgraber@ubuntu.com>  Fri, 11 Oct 2013 17:41:26 -0400

ubiquity-slideshow-ubuntu (74) saucy; urgency=low

  [ Alfredo Hernández ]
  * New Ubuntu GNOME slideshow (LP: #1154715)

  [ Pasi Lallinaho ]
  * Remove mention to broken Twitter plugin for Pidgin.

  [ Dylan McCall ]
  * New illustration for Ubuntu slideshow (LP: #1225818).

 -- Dylan McCall <dylanmccall@ubuntu.com>  Thu, 19 Sep 2013 11:20:36 -0700

ubiquity-slideshow-ubuntu (73) saucy; urgency=low

  * Make U1 logo same color as the titles.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 21 Aug 2013 18:49:57 +0100

ubiquity-slideshow-ubuntu (72) saucy; urgency=low
