@@ -5,7 +5,7 @@
 <div class="main">
 	<div class="content">
 		<p>Congratulations, you have chosen to install Xubuntu 14.04!</p>
-		<p class="note box bottom">If you are running this installation via the <em>Try Xubuntu</em> option, feel free to examine things as Xubuntu installs. After the installation, the desktop will look similar to how it does now.</p>
+		<p>If you are running this installation via the <em>Try Xubuntu</em> option, feel free to examine things as Xubuntu installs. After the installation, the desktop will look similar to how it does now.</p>
 	</div>
 	<img class="shot leftpad" src="images/art_xubuntu.png" />
 </div>
