@@ -4,20 +4,22 @@
 
 <div class="main">
 	<div class="content full group">
-		<p>On the desktop, you will see icons that can be used to access some of the most common places on your system. In addition, you will see a single, multipurpose, panel at the top of the screen.</p>
+		<p>On the desktop you will see icons that can be used to access some of the most common places on your system. In addition, you will see a single, multipurpose, panel at the top of the screen.</p>
 	</div>
 
 	<div class="panel">
 		<img src="images/shot_panel.png" alt="Xubuntu default panel" />
 	</div>
 
+	<div id="panelhighlight"></div>
+
 	<div class="panelnotes group">
-		<p class="note box">On the left hand side, you will see a Xubuntu logo. Click it to open the main menu. We will tell you more about this menu in the next slide.</p>
-		<p class="note box">The middle part of the panel is dedicated to window buttons for open applications.</p>
-		<p class="note box">On the far right, you will see indicators and a clock. Click the clock to see the monthly calendar.</p>
+		<p id="panel_menu" class="note box">On the left hand side, you will see a Xubuntu logo. Click it to open the main menu. We will tell you more about this menu in the next slide.</p>
+		<p id="panel_windowbuttons" class="note box">The middle part of the panel is dedicated to window buttons for open applications.</p>
+		<p id="panel_indicatorsclock" class="note box">On the far right, you will see indicators and a clock. Click the clock to see the monthly calendar.</p>
 	</div>
 
 	<div class="content full">
-		<p>You can customize the panel by right-clicking the panel and selecting <em>Panel » Panel Preferences</em>. You can also add and remove panels as you like from this dialog.</p>
+		<p>You can customize the panel by right-clicking the panel and selecting <em>Panel » Panel Preferences</em>. You can also add and remove panels using this dialog.</p>
 	</div>
 </div>
