@@ -10,7 +10,7 @@
 			<p>Still have questions? The full list of support methods is available at the <a href="http://xubuntu.org/help">Help & Support section</a> of the Xubuntu website.</p>
 	</div>
 	<div class="content narrow box">
-		<h2>Live support</h2>
+		<h2>Real-time support</h2>
 			<p>For live, online support, join our IRC channel, <em>#xubuntu</em>, by <a href="http://webchat.freenode.net/?channels=xubuntu&nick=xubuntu...&prompt=1">clicking here</a>.</p>
 			<p class="note">The main support channel is English only. For support in other languages, view the full list of <a href="https://wiki.ubuntu.com/IRC/ChannelList/Local">local support channels</a>.</p>
 	</div>
