@@ -22,6 +22,8 @@
 	</script>
 	
 	<script type="text/javascript" src="link-core/slideshow.js"></script>
+
+	<script type="text/javascript" src="link/xubuntu.js"></script>
 </head>
 
 <body>
