@@ -20,6 +20,7 @@ ubiquity-slideshow-ubuntu (79) UNRELEASED; urgency=medium
   * Xubuntu: Update the desktop slide
   * Xubuntu: Add a slide that lists some default applications
   * Xubuntu: Update the Help & Support slide
+  * Xubuntu: Highlight different portions of panel when hovering over the appropriate information box.
 
  -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 15 Mar 2014 11:57:56 +0200
 
